# wimd-railway-deploy

./: .claude.md  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  .railwayignore  .secrets.baseline  AI_DETAILED_PROMPT.txt  AI_RESUME_STATE.md  AI_SHORT_PROMPT.txt  AI_START_HERE.txt  AI_TEAM_METHODOLOGY.md  API_MODE_GOVERNANCE_PROTOCOL.md  API_MODE_INTEGRATION_COMPLETE.md  API_USAGE_LOG.json  BACKUP_SYSTEM_STATUS.md  BASELINE_SNAPSHOT_20251113-085236.md  BASELINE_SNAPSHOT_20251113-185033.md  BASELINE_SNAPSHOT_20251123-214357.md  CLAUDE.md  CLAUDE_CODE_README.md  CLAUDE_DESKTOP_START.md  CLEANUP_SUMMARY_2025-12-05.md  CODE_AUDIT_2025-11-19.md  CODE_GOVERNANCE_STANDARD_v1.md  COPY_PASTE_FOR_GEMINI.txt  CRASH_RECOVERY_QUICK_REFERENCE.md  CRITICAL_RESTART_CONTEXT.md  CROSS_AGENT_SOLUTION_IMPLEMENTATION.md  CROSS_AGENT_STATE_ASSESSMENT_2026-01-05.md  CURRENT_WORK.json  CURSOR_VERIFICATION_CODEX_FIXES.md  DAY_1_BLOCKERS_RESOLVED.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_ENFORCEMENT_IMPLEMENTATION_COMPLETE.md  DEPLOYMENT_FAILURE_REPORT_2025-11-21.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TEST_REPORT_2026_02_03.md  DEPLOYMENT_TRUTH.md  DEPLOYMENT_WORKAROUNDS.md  DOCUMENTATION_CLEANUP_RECOMMENDATIONS_2025-12-05.md  (+134 more)
.ai-agents/: AGENT_PROTOCOL.md  AGENT_ROLES.md  AI_AGENT_PROMPT.md  ASYNC_PROTOCOL.md  AUTO_START_INSTRUCTIONS.md  BLOCKING_ISSUES_ANALYSIS_2026-01-04.md  CIT_STATUS_NOTE_2025-11-18.md  CLAUDE_AI_IMPLEMENTATION_GUIDE.md  CLAUDE_CODE_LOCAL_DEV_SETUP_COMPLETE_2025-11-21.md  CLAUDE_CODE_PHASE1_STATUS_2025-11-20.md  CLAUDE_CODE_REVIEW_OF_GEMINI_PLAN_2025-11-20.md  CLAUDE_HANDOFF_2025-11-26.md  CLAUDE_INSTRUCTIONS_FOR_RAILWAY.md  CLAUDE_QUESTION_FOR_GEMINI_2025-11-26.md  CLAUDE_RESPONSE_TO_GEMINI_2025-11-26.md  CLAUDE_STATE_WAITING_FOR_GEMINI_2025-11-26.md  CLAUDE_TO_GEMINI_PS101_RESOLUTION_2025-11-27.md  CLAUDE_UPDATE_FOR_GEMINI_2025-11-26.md  CODEBASE_VALIDATION_REPORT.md  CODEXCAPTURE_STATUS.md  CODEX_AGENT_BROWSER_GUIDE.md  CODEX_AGENT_WORKFLOW.md  CODEX_CODEXCAPTURE_ACCESS.md  CODEX_READ_THIS_FIRST.txt  CODEX_RESET_PROTOCOL.md  COLLABORATION_PROTOCOL.md  COMMUNICATION_PROTOCOL.md  CRITICAL_FILES_DO_NOT_DELETE.md  CRITICAL_ISSUE_PHASE1_BREAKS_UI_2025-11-21.md  CROSS_AGENT_PROTOCOL.md  CURRENT_BACKUP_REFERENCE.md  CURRENT_STATE_INVENTORY_2026-01-04.md  CURSOR_COMPLETION_SUMMARY_2025-11-05.md  DEPLOYMENT_AUDIT_CHECKLIST.md  DEPLOYMENT_PROTOCOL_MANDATORY.md  DEPLOYMENT_TEST_FLOW.md  DEPLOY_ACTION_PLAN_2025-11-07.md  DIAGNOSIS_AND_SUGGESTED_CHANGES_2025-11-18.md  DIAGNOSTIC_LOGIN_ISSUE_2025-11-24.md  DIAGNOSTIC_OUTSTANDING_ISSUES_FOR_GEMINI_2025-11-20.md  (+133 more)
.mosaic/: AGENT_DISCOVERY_FAILURE.md  BACKEND_FAILURE_PATTERN_ANALYSIS.md  CI_ENFORCEMENT_IMPLEMENTATION.md  COMPLETION_PROTOCOL.md  CONTEXT_PROVISIONING_TEST.md  CRITICAL_RENAME_NEEDED.md  DEPLOYMENT_FAILURE_INDEX.md  DEPLOYMENT_FAILURE_RESOLUTION_2026_01_25.md  DEPLOYMENT_TESTING_FAILURES_ANALYSIS.md  GATE_10_RESULTS.md  GEMINI_TAKEOVER_REQUEST.txt  GIT_AUTHENTICATION_TROUBLESHOOTING.md  GOVERNANCE_FAILURE_2026_01_18.md  GOVERNANCE_INDUSTRY_STANDARD.md  GUARDIAN_UX_FLOW_TRACING.md  HANDOFF_2026_02_04_PS101_TESTING.md  HANDOFF_TO_GEMINI.md  LATEST_HANDOFF.md  MANDATORY_AGENT_BRIEFING.md  ML_ENFORCEMENT_SUMMARY.md  NEW_SESSION_VERIFICATION_CHECKLIST.md  PLATFORM_EVALUATION_2026-01-05.md  PROJECT_GUARDIAN_PROMPT.md  PROTOCOL_ISSUE_FILE_NAMING.md  PS101_BUG_FIX_2026_02_05.md  PS101_FLOW_TEST_FINDINGS_2026_02_04.md  RAILWAY_DEPLOYMENT_SSE_DIAGNOSTICS.md  RENDER_MIGRATION_COMPLETE.md  RENDER_MIGRATION_GUIDE.md  SESSION_BACKUP_2026-01-05_18-25.md  SESSION_COMPLETE.md  SESSION_END_2026_02_05.md  SESSION_HANDOFF_2026-01-07.md  SESSION_HANDOFF_2026-01-08.md  SESSION_HANDOFF_2026-01-18.md  SESSION_INIT.md  SESSION_LEDGER.md  SESSION_RESUME_CARD.md  SESSION_START_CORRECTNESS.md  SESSION_START_PS101.md  (+18 more)
.receipts/: architectural_correction_complete_2026-02-15.receipt  deprecation_deletion_2026-02-15.receipt  session_2026-02-15.receipt
DEPRECATED_PROSE_GOVERNANCE/: README.md
MOSAIC_MVP_IMPLEMENTATION/: GEMINI_DAY_1_REVIEW.md  IMPLEMENTATION_REFINEMENT_Claude-Gemini.md  MOSAIC_COMPLETE_HANDOFF.md  MOSAIC_IMMEDIATE_ACTION_PLAN.md  NOTE_FOR_GEMINI.md  README_FOR_GEMINI.md  WIMD_MVP_Analysis_Complete.md  mosaic_context_bridge.py
Planning/: BOOKING_SYSTEM_FUTURE_MODULE.md  MANDATORY_VERIFICATION_GATE.md  NAR_TASK_PROTOCOL.md  NETLIFY_AGENT_PROTOCOL.md  USER_INTERRUPT_PROTOCOL.md
api/: ai_clients.py  analytics.py  claude_integration.py  code_executor.py  corpus_reindex.py  index.py  migrations.py  monitoring.py  prompt_selector.py  prompts_loader.py  ps101.py  rag_engine.py  self_efficacy_engine.py  settings.py  startup_checks_test.py  storage.py  storage_sqlite_backup.py
backend/: CODEX_HANDOVER_KIT.md  CODEX_INSTRUCTIONS.md  README.md  ROLLING_CHECKLIST.md  requirements.txt  test_minimal.py
data/: mosaic.db  prompts_6e488b26db77.json  prompts_clean.csv  prompts_fixed.csv  prompts_registry.json
deploy_logs/: 2025-11-18_ps101-qa-mode.md
deployment/: deploy_baseline.env
docs/: AGENT_TASK_TEMPLATE.md  API_MODE_TRACKING_AND_ISSUES.md  ARCHITECTURAL_DECISIONS.md  ARCHITECTURE_CORRECTION_2026_02_15.md  AUTH_MERGE_EXECUTION_2025-11-03.md  CLAUDE_CODE_README.md  COMMAND_CENTER_BACKUP_PLAN.md  CONTEXT_ENGINEERING_CRITICAL_INFRASTRUCTURE.md  CONVERSATION_NOTES.md  DEPLOYMENT_AUTOMATION_ENFORCEMENT_PLAN.md  DEPLOYMENT_VERIFICATION_CHECKLIST.md  DEPLOY_STATUS_NOTE.md  DNS_PROOF.md  EXTERNAL_ARCHITECTURE_OVERVIEW_2025-11-03.md  FINAL_SUMMARY_FOR_DAMIAN.md  GEMINI_IMMEDIATE_TASKS.md  GEMINI_MCP_WORK_PROMPTS.md  GEMINI_PHASE_1_TASK.md  (+46 more)
(+735 files in other folders)
