# Project configuration for automated code quality enforcement
# Based on ISO/IEC 5055:2021 + Policy-as-Code standards

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wimd-railway-deploy"
version = "2.0.0"
description = "Mosaic Career Transition Platform"
requires-python = ">=3.9"

# Black - Code formatter
[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | build
  | dist
  | \.eggs
  | backups
  | docs_archive
  | Archives
)/
'''

# Ruff - Fast Python linter (replaces flake8, isort, pyupgrade)
[tool.ruff]
line-length = 100
target-version = "py39"

# Enable additional rule sets
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "T",    # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "Q",    # flake8-quotes
    "RUF",  # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501", "B008", "S101", "T201", "UP035", "UP006", "RUF001", "F841",
    "B007", "C414", "S311", "TCH", "RUF013", "E722", "SIM102", "SIM115",
    "SIM117", "SIM108", "SIM103", "B904", "S105", "S603", "S607", "S608",
    "C416", "E402", "S310", "F401"
]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
    "backups",
    "docs_archive",
    "Archives",
]

# Per-file ignores
[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests
"scripts/**/*.py" = ["T201"]  # Allow print in scripts

# Ruff formatting (Black-compatible)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# Ruff isort settings
[tool.ruff.isort]
known-first-party = ["api", "frontend", "mosaic_ui"]
force-single-line = false
lines-after-imports = 2

# Ruff McCabe complexity
[tool.ruff.mccabe]
max-complexity = 10

# isort - Import sorting
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

# pytest - Testing framework
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage settings
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=api",
    "--cov=frontend",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]

# Markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "golden: marks tests as golden dataset tests",
]

# Coverage.py - Code coverage
[tool.coverage.run]
branch = true
source = ["api", "frontend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/backups/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# mypy - Static type checking
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for strict typing
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Bandit - Security linter
[tool.bandit]
exclude_dirs = [
    ".git",
    ".venv",
    "venv",
    "tests",
    "__pycache__",
    "build",
    "dist",
]
skips = ["B101"]  # Allow assert in non-test files

# Bandit severity levels
[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests/*"]

# pylint - Advanced Python linter (optional, stricter than ruff)
[tool.pylint.main]
jobs = 4
ignore = [".git", ".venv", "venv", "__pycache__", "build", "dist"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "W0511",  # fixme (TODO comments)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 7
max-attributes = 10
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50

# Mosaic-specific quality gates
[tool.mosaic]
# ISO/IEC 5055 compliance targets
security_score_min = 8.0
reliability_score_min = 8.0
performance_score_min = 7.0
maintainability_score_min = 8.0

# Quality thresholds
coverage_threshold = 80
complexity_threshold = 10
duplication_threshold = 5

# Feature flags
enforce_postgres_patterns = true
enforce_error_logging = true
enforce_idempotent_writes = true
